--- a/src/data-inputs/certification.css
+++ b/src/data-inputs/certification.css
@@ -8,3 +8,14 @@
   margin: 3px;
   height: auto;
 }
+
+.cerbutt{
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.edu1{
+    margin-bottom: 15px;
+}
