--- a/src/data-inputs/experience.css
+++ b/src/data-inputs/experience.css
@@ -7,3 +7,27 @@
   border: 2px solid black;
   margin: 3px;
   height: auto;}
+
+  .icon{
+    position: relative;
+    top: 3px;
+  }
+
+  .compNumb{
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .remove{
+    height: 25px;
+    width: 25px;
+  }
+
+  .add{
+    position: relative;
+    width: 70px;
+    height: 30px;
+    right: -385px;
+  }
