--- a/src/data-inputs/projects.css
+++ b/src/data-inputs/projects.css
@@ -6,3 +6,14 @@
   border: 2px solid black;
   margin: 3px;
   height: auto;}
+
+  .Probutt{
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .Project1{
+    margin-bottom: 10px;
+  }
