--- a/src/resume/basic-resume.css
+++ b/src/resume/basic-resume.css
@@ -1,35 +1,24 @@
 .basic{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid black;
+}
+
+.fullname{
+    display: flex;
     flex-direction: column;
-    gap: 5px;
-    width: 90%;
-    
 }
-
-
-h2{
-    margin-bottom: 5px;
-    text-align: center;
-    font-size: 1.7em;
-}
-
-
 
 .otherData{
     display: flex;
-    gap: 20px;
+    gap: 15px;
     justify-content: center;
-    height: 50px;
-    padding-top: 0px;
-    align-items: center;
+    margin-bottom: 30px;
+
 }
 
-.divider {
-    width: 100%;
-    border: 0;
-    height: 1px;
-    background-color: black;
-    margin: 10px 0;
+h2{
+    text-align: center;
+    margin-bottom: 0px;
 }
