--- a/src/resume/certification-resume.css
+++ b/src/resume/certification-resume.css
@@ -71,4 +71,14 @@
     height: 50px;
 }
 
+.summary-cer{
+    margin: 0px;
+}
+
+@media (max-width : 400px){
+    .summary-exp {
+        height: 100px;
+    }
+}
+
 
