--- a/src/resume/project-resume.css
+++ b/src/resume/project-resume.css
@@ -14,6 +14,7 @@
 
 .project1{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     margin-bottom: 20px;
 }
@@ -21,6 +22,7 @@
 
 .name-description{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 0px;
     height: 20px;
@@ -31,11 +33,13 @@
     font-weight: 500;
     margin: 0px;
     display: flex;justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .description-pro{
     display: flex;justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     margin: 0px;
     font-weight: 500;
@@ -44,6 +48,7 @@
 .date-website{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin-bottom: 0px;
     height: 20px;
 }
@@ -53,11 +58,13 @@
     font-weight: 500;
     margin: 0px;
     display: flex;justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .link-pro{
     display: flex;justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     margin: 0px;
     font-weight: 500;
@@ -68,9 +75,10 @@
 
 .summary-exp{
     margin-top: 5px;
-    height: 50px;
+    height: 400px;
 }
 
 .summary-pro{
     margin:0px;
+    
 }
